Fix toaster z-index (sliders appeared above)

--- a/src/css/Toaster.css
+++ b/src/css/Toaster.css
@@ -2,6 +2,7 @@
 	display: flex;
 	justify-content: center;
 	position: fixed;
+	z-index: 10;
 	bottom: 16px;
 	left: 16px;
 	right: 16px;
